chore: retirando issues