@@ -1,55 +1,46 @@
 package com.project.qampus.service;
 
+import com.project.qampus.dto.PostDTO;
+import com.project.qampus.dto.RecommendationResponseDTO;
+import com.project.qampus.model.*;
+import com.project.qampus.model.enums.VoteType;
+import com.project.qampus.repositories.*;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.security.core.Authentication;
+import org.springframework.web.server.ResponseStatusException;
+
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertSame;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoInteractions;
-import static org.mockito.Mockito.when;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.security.core.Authentication;
-
-import com.project.qampus.dto.PostDTO;
-import com.project.qampus.model.Post;
-import com.project.qampus.model.User;
-import com.project.qampus.model.Vote;
-import com.project.qampus.model.enums.VoteType;
-import com.project.qampus.repositories.PostRepository;
-import com.project.qampus.repositories.UserRepository;
-import com.project.qampus.repositories.VoteRepository;
-import org.springframework.web.server.ResponseStatusException;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class PostServiceTest {
 
     @Mock PostRepository repository;
     @Mock TagService tagService;
-    @Mock UserRepository userRepository;
-    @Mock Authentication authentication;
     @Mock VoteRepository voteRepository;
-    @Mock Post post;
+    @Mock Authentication authentication;
 
     @InjectMocks PostService postService;
 
     private User user;
 
     @BeforeEach
-    void setUp() {
+    void setup() {
         user = new User();
         user.setId("user-id");
-        user.setName("Leonardo");
-        user.setEmail("leonardo@qampus.com");
     }
+
+
 
     @Test
     void shouldCreatePostSuccessfully() {
@@ -58,219 +49,147 @@ class PostServiceTest {
         when(authentication.getPrincipal()).thenReturn(user);
         when(tagService.resolveTags(Set.of())).thenReturn(Set.of());
 
-        Post saved = new Post();
-        saved.setTitle("Título");
-        saved.setContent("Conteúdo");
-        saved.setUser(user);
-        saved.setTags(Set.of());
-
-        when(repository.save(any(Post.class))).thenReturn(saved);
+        when(repository.save(any(Post.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
 
         Post result = postService.create(dto, authentication);
 
         assertEquals("Título", result.getTitle());
         assertEquals("Conteúdo", result.getContent());
         assertEquals(user, result.getUser());
-
-        verify(authentication).getPrincipal();
-        verify(tagService).resolveTags(Set.of());
-        verify(repository).save(any(Post.class));
-        verifyNoInteractions(userRepository);
     }
+
+
 
     @Test
     void shouldFindAllPosts() {
         Post p1 = new Post();
-        p1.setTitle("Post 1");
-
         Post p2 = new Post();
-        p2.setTitle("Post 2");
 
-        when(repository.findAllOrderByVotes()).thenReturn(List.of(p1, p2));
+        when(repository.findAllOrderByVotes())
+                .thenReturn(List.of(p1, p2));
 
-        var result = postService.findAll();
+        List<Post> result = postService.findAll();
 
         assertEquals(2, result.size());
-        assertEquals("Post 1", result.get(0).getTitle());
-        assertEquals("Post 2", result.get(1).getTitle());
-
-        verify(repository).findAllOrderByVotes();
     }
 
     @Test
-    void shouldFindPostById() {
-        post = new Post();
-        post.setTitle("Meu post");
+    void shouldFindById() {
+        Post post = new Post();
+        post.setTitle("Post");
 
-        when(repository.findById("1")).thenReturn(Optional.of(post));
+        when(repository.findById("1"))
+                .thenReturn(Optional.of(post));
 
         Post result = postService.findById("1");
 
-        assertEquals("Meu post", result.getTitle());
-        verify(repository).findById("1");
+        assertEquals("Post", result.getTitle());
     }
 
     @Test
-    void shouldThrowExceptionWhenPostNotFound() {
-        when(repository.findById("999")).thenReturn(Optional.empty());
+    void shouldThrowWhenPostNotFound() {
+        when(repository.findById("999"))
+                .thenReturn(Optional.empty());
 
-        RuntimeException e = assertThrows(
+        RuntimeException ex = assertThrows(
                 RuntimeException.class,
                 () -> postService.findById("999")
         );
 
-        assertEquals("Post not found... x.x", e.getMessage());
-        verify(repository).findById("999");
+        assertEquals("Post not found... x.x", ex.getMessage());
     }
+
+
 
     @Test
     void shouldUpdatePostSuccessfully() {
-        Set<String> tags = Set.of("Java", "Spring");
-        PostDTO dto = new PostDTO("Novo título", "Novo conteúdo", tags);
+        Post post = new Post();
+        post.setUser(user);
 
-        when(repository.findById("post-1")).thenReturn(Optional.of(post));
+        PostDTO dto = new PostDTO("Novo", "Conteúdo", Set.of());
+
+        when(repository.findById("1")).thenReturn(Optional.of(post));
         when(authentication.getPrincipal()).thenReturn(user);
-        when(post.getUser()).thenReturn(user);
-        when(tagService.resolveTags(tags)).thenReturn(Set.of());
+        when(tagService.resolveTags(Set.of())).thenReturn(Set.of());
         when(repository.save(post)).thenReturn(post);
 
-        Post result = postService.update("post-1", dto, authentication);
+        Post result = postService.update("1", dto, authentication);
 
-        assertSame(post, result);
-        verify(post).setTitle("Novo título");
-        verify(post).setContent("Novo conteúdo");
-        verify(post).setTags(any());
-        verify(tagService).resolveTags(tags);
+        assertEquals(post, result);
         verify(repository).save(post);
     }
 
     @Test
-    void shouldThrowExceptionWhenVotingOnNonExistingPost() {
-        when(repository.findById("post-404")).thenReturn(Optional.empty());
+    void shouldThrowWhenUpdatingOtherUser() {
+        User other = new User();
+        other.setId("other");
 
-        RuntimeException e = assertThrows(
+        Post post = new Post();
+        post.setUser(other);
+
+        when(repository.findById("1"))
+                .thenReturn(Optional.of(post));
+
+        when(authentication.getPrincipal())
+                .thenReturn(user);
+
+        RuntimeException ex = assertThrows(
                 RuntimeException.class,
-                () -> postService.upvote("post-404", user)
+                () -> postService.update(
+                        "1",
+                        new PostDTO("x", "y", Set.of()),
+                        authentication
+                )
         );
 
-        assertEquals("post não encontrado", e.getMessage());
-        verify(repository).findById("post-404");
-        verifyNoInteractions(voteRepository);
+        assertEquals("Você não pode editar esta dúvida.", ex.getMessage());
+    }
+
+
+
+    @Test
+    void shouldDeletePostSuccessfully() {
+        Post post = new Post();
+        post.setUser(user);
+
+        when(repository.findById("1"))
+                .thenReturn(Optional.of(post));
+
+        postService.delete("1", user);
+
+        verify(repository).delete(post);
     }
 
     @Test
-    void shouldCreateLikeWhenUserHasNotVoted() {
-        when(repository.findById("post-1")).thenReturn(Optional.of(post));
-        when(post.getId()).thenReturn("post-1");
-        when(voteRepository.findByUserIdAndPostId("user-id", "post-1"))
+    void shouldThrowWhenDeletingNotFound() {
+        when(repository.findById("1"))
                 .thenReturn(Optional.empty());
-        when(post.getUpVotes()).thenReturn(5L);
-        when(repository.save(post)).thenReturn(post);
 
-        assertSame(post, postService.upvote("post-1", user));
-
-        verify(post).setUpVotes(6L);
-        verify(voteRepository).save(any(Vote.class));
-        verify(repository).save(post);
+        assertThrows(
+                ResponseStatusException.class,
+                () -> postService.delete("1", user)
+        );
     }
 
     @Test
-    void shouldRemoveLikeWhenUserVotesAgainWithSameType() {
-        Vote vote = new Vote();
-        vote.setType(VoteType.LIKE);
+    void shouldThrowWhenDeletingOtherUser() {
+        User other = new User();
+        other.setId("other");
 
-        when(repository.findById("post-1")).thenReturn(Optional.of(post));
-        when(post.getId()).thenReturn("post-1");
-        when(voteRepository.findByUserIdAndPostId("user-id", "post-1"))
-                .thenReturn(Optional.of(vote));
-        when(post.getUpVotes()).thenReturn(5L);
-        when(repository.save(post)).thenReturn(post);
+        Post post = new Post();
+        post.setUser(other);
 
-        assertSame(post, postService.upvote("post-1", user));
+        when(repository.findById("1"))
+                .thenReturn(Optional.of(post));
 
-        verify(post).setUpVotes(4L);
-        verify(voteRepository).delete(vote);
-        verify(repository).save(post);
+        assertThrows(
+                ResponseStatusException.class,
+                () -> postService.delete("1", user)
+        );
     }
 
-    @Test
-    void shouldRemoveDislikeWhenUserVotesAgainWithSameType() {
-        Vote vote = new Vote();
-        vote.setType(VoteType.DISLIKE);
-
-        when(repository.findById("post-1")).thenReturn(Optional.of(post));
-        when(post.getId()).thenReturn("post-1");
-        when(voteRepository.findByUserIdAndPostId("user-id", "post-1"))
-                .thenReturn(Optional.of(vote));
-        when(post.getDownVotes()).thenReturn(3L);
-        when(repository.save(post)).thenReturn(post);
-
-        assertSame(post, postService.downvote("post-1", user));
-
-        verify(post).setDownVotes(2L);
-        verify(voteRepository).delete(vote);
-        verify(repository).save(post);
-    }
-
-    @Test
-    void shouldChangeLikeToDislike() {
-        Vote vote = new Vote();
-        vote.setType(VoteType.LIKE);
-
-        when(repository.findById("post-1")).thenReturn(Optional.of(post));
-        when(post.getId()).thenReturn("post-1");
-        when(voteRepository.findByUserIdAndPostId("user-id", "post-1"))
-                .thenReturn(Optional.of(vote));
-        when(post.getUpVotes()).thenReturn(5L);
-        when(post.getDownVotes()).thenReturn(2L);
-        when(repository.save(post)).thenReturn(post);
-
-        assertSame(post, postService.downvote("post-1", user));
-
-        verify(post).setUpVotes(4L);
-        verify(post).setDownVotes(3L);
-        assertEquals(VoteType.DISLIKE, vote.getType());
-        verify(voteRepository).save(vote);
-        verify(repository).save(post);
-    }
-
-    @Test
-    void shouldChangeDislikeToLike() {
-        Vote vote = new Vote();
-        vote.setType(VoteType.DISLIKE);
-
-        when(repository.findById("post-1")).thenReturn(Optional.of(post));
-        when(post.getId()).thenReturn("post-1");
-        when(voteRepository.findByUserIdAndPostId("user-id", "post-1"))
-                .thenReturn(Optional.of(vote));
-        when(post.getUpVotes()).thenReturn(5L);
-        when(post.getDownVotes()).thenReturn(2L);
-        when(repository.save(post)).thenReturn(post);
-
-        assertSame(post, postService.upvote("post-1", user));
-
-        verify(post).setUpVotes(6L);
-        verify(post).setDownVotes(1L);
-        assertEquals(VoteType.LIKE, vote.getType());
-        verify(voteRepository).save(vote);
-        verify(repository).save(post);
-    }
-
-    @Test
-    void shouldCreateDislikeWhenUserHasNotVoted() {
-        when(repository.findById("post-1")).thenReturn(Optional.of(post));
-        when(post.getId()).thenReturn("post-1");
-        when(voteRepository.findByUserIdAndPostId("user-id", "post-1"))
-                .thenReturn(Optional.empty());
-        when(post.getDownVotes()).thenReturn(3L);
-        when(repository.save(post)).thenReturn(post);
-
-        assertSame(post, postService.downvote("post-1", user));
-
-        verify(post).setDownVotes(4L);
-        verify(voteRepository).save(any(Vote.class));
-        verify(repository).save(post);
-    }
+    // ================= SEARCH =================
 
     @Test
     void shouldSearchPosts() {
@@ -278,116 +197,40 @@ class PostServiceTest {
         p.setTitle("Spring Boot Test");
 
         when(repository.findByTitleContainingIgnoreCaseOrContentContainingIgnoreCase(
-                "Spring", "Spring")).thenReturn(List.of(p));
+                "Spring", "Spring"))
+                .thenReturn(List.of(p));
 
-        var result = postService.searchPost("Spring");
+        List<Post> result = postService.searchPost("Spring");
 
         assertEquals(1, result.size());
-        assertEquals("Spring Boot Test", result.getFirst().getTitle());
-
-        verify(repository).findByTitleContainingIgnoreCaseOrContentContainingIgnoreCase(
-                "Spring", "Spring");
+        assertEquals("Spring Boot Test", result.get(0).getTitle());
     }
 
+
+
     @Test
-    void shouldFindPostsByUserId() {
+    void shouldFindByTag() {
         Post p = new Post();
-        p.setTitle("User Post");
 
-        when(repository.findByUserId("user-1")).thenReturn(List.of(p));
+        when(repository.findByTagOrderByVotes("java"))
+                .thenReturn(List.of(p));
 
-        var result = postService.findByUserId("user-1");
-
-        assertEquals(1, result.size());
-        verify(repository).findByUserId("user-1");
-    }
-
-    @Test
-    void shouldFindByTagOrderedByVotes() {
-        Post p = new Post();
-        p.setTitle("Tag Post");
-
-        when(repository.findByTagOrderByVotes("java")).thenReturn(List.of(p));
-
-        var result = postService.findByTag("java");
+        List<Post> result = postService.findByTag("java");
 
         assertEquals(1, result.size());
-        verify(repository).findByTagOrderByVotes("java");
     }
 
     @Test
-    void shouldFindAllOrderedByVotesWhenTagIsBlank() {
-        Post p = new Post();
-        p.setTitle("All Post");
+    void shouldFindAllWhenTagBlank() {
+        when(repository.findAllOrderByVotes())
+                .thenReturn(List.of(new Post()));
 
-        when(repository.findAllOrderByVotes()).thenReturn(List.of(p));
-
-        var result = postService.findByTag("  ");
+        List<Post> result = postService.findByTag("  ");
 
         assertEquals(1, result.size());
-        verify(repository).findAllOrderByVotes();
-    }
-    @Test
-    void shouldDeletePostSuccessfully() {
-        Post realPost = new Post();
-        realPost.setUser(user);
-
-
-        when(repository.findById("post-1")).thenReturn(Optional.of(realPost));
-
-        postService.delete("post-1", user);
-
-        verify(repository).delete(realPost);
-
-
     }
 
-    @Test
-    void shouldThrowNotFoundWhenDeleting() {
-        when(repository.findById("post-1")).thenReturn(Optional.empty());
 
-
-        assertThrows(ResponseStatusException.class,
-                () -> postService.delete("post-1", user));
-
-
-    }
-
-    @Test
-    void shouldThrowForbiddenWhenDeletingOtherUserPost() {
-        User other = new User();
-        other.setId("user-2");
-
-
-        Post realPost = new Post();
-        realPost.setUser(other);
-
-        when(repository.findById("post-1")).thenReturn(Optional.of(realPost));
-
-        assertThrows(ResponseStatusException.class,
-                () -> postService.delete("post-1", user));
-
-    }
-
-    @Test
-    void shouldThrowAccessDeniedWhenUpdatingOtherUserPost() {
-        User other = new User();
-        other.setId("user-2");
-
-
-        Post realPost = new Post();
-        realPost.setUser(other);
-
-        when(repository.findById("post-1")).thenReturn(Optional.of(realPost));
-        when(authentication.getPrincipal()).thenReturn(user);
-
-        assertThrows(Exception.class,
-                () -> postService.update("post-1",
-                        new PostDTO("x", "y", Set.of()),
-                        authentication));
-
-
-    }
 
     @Test
     void shouldReturnRecommendations() {
@@ -397,30 +240,30 @@ class PostServiceTest {
         p.setUpVotes(10L);
         p.setDownVotes(2L);
 
+        when(repository.findById("1"))
+                .thenReturn(Optional.of(new Post()));
 
-        when(repository.findById("1")).thenReturn(Optional.of(new Post()));
-        when(repository.findRecommendedPosts("1")).thenReturn(List.of(p));
+        when(repository.findRecommendedPosts("1"))
+                .thenReturn(List.of(p));
 
-        var result = postService.recommend("1");
+        List<RecommendationResponseDTO> result = postService.recommend("1");
 
         assertEquals(1, result.size());
-        assertEquals("Recomendado", result.getFirst().title());
-        assertEquals(8L, result.getFirst().voteBalance());
 
+        RecommendationResponseDTO dto = result.get(0);
 
+        assertEquals("Recomendado", dto.title());
+        assertEquals(8L, dto.voteBalance());
     }
 
     @Test
-    void shouldThrowWhenPostNotFoundInRecommend() {
-        when(repository.findById("1")).thenReturn(Optional.empty());
+    void shouldThrowWhenRecommendNotFound() {
+        when(repository.findById("1"))
+                .thenReturn(Optional.empty());
 
-
-        assertThrows(ResponseStatusException.class,
-                () -> postService.recommend("1"));
-
-
+        assertThrows(
+                ResponseStatusException.class,
+                () -> postService.recommend("1")
+        );
     }
-
-
-
 }
